--- a/app.json
+++ b/app.json
@@ -26,7 +26,20 @@
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": ["expo-router"],
+    "plugins": [
+      "expo-router",
+      [
+        "expo-font",
+        {
+          "fonts": [
+            "./assets/SairaCondensed-Regular.ttf",
+            "./assets/SairaCondensed-Medium.ttf",
+            "./assets/SairaCondensed-Bold.ttf",
+            "./assets/SairaCondensed-ExtraBold.ttf"
+          ]
+        }
+      ]
+    ],
     "experiments": {
       "typedRoutes": true
     }
